# course_work_2

./: CMakeLists.txt  Makefile  base_structs.h  main.c
consoleLogs/: help.c  help.h  info.c  info.h
image_funcs/: encircle_white_area.c  encircle_white_area.h  file_actions.c  file_actions.h  image_border_with_extension.c  image_border_with_extension.h  image_color_replace_func.c  image_color_replace_func.h  image_copy_func.c  image_copy_func.h  image_mirror_func.c  image_mirror_func.h  image_split_func.c  image_split_func.h
parser/: parser.c  parser.h
parser/validator/: base_validator.c  base_validator.h  canvas_entity_validator.c  canvas_entity_validator.h
